some more changes

--- a/src/app/components/view-edit-section/view-edit-section.component.html
+++ b/src/app/components/view-edit-section/view-edit-section.component.html
@@ -1,3 +1,8 @@
+<div class="top-bar">
+  <button mat-button color="primary" (click)="addSection()">
+    Add New Section
+  </button>
+</div>
 @for (section of sections$ | async; track $index) { @if(!editMode || editSection
 !== section.id){
 <section [ngClass]="['section', section.background + '-background']">
