--- a/src/app/components/view-edit-section/view-edit-section.component.scss
+++ b/src/app/components/view-edit-section/view-edit-section.component.scss
@@ -1,6 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Notable&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Notable&family=Source+Sans+3&display=swap");
 
+.top-bar {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px dotted grey;
+  margin-bottom: 1rem;
+}
 .section {
   width: 100%;
   display: flex;
