--- a/src/app/components/view-edit-section/view-edit-section.component.html
+++ b/src/app/components/view-edit-section/view-edit-section.component.html
@@ -60,6 +60,7 @@
 } @else if(editMode && editSection === section.id) {
 <app-create-section
   [newSection]="section"
+  (view)="viewSection()"
   (saved)="toggleEditMode(section)"
 ></app-create-section>
 } }
